tests/negative/parser/err_while_no_condition.ual
-- Parser error test: while missing condition
@stack = stack.new(i64)
while {
    @stack push(1)
}
